--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,37 @@ body {
   height: 64px;
   align-items: center;
 }
-
-
+.tagline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 1.6rem;
+  }
+  .main-title {
+    text-transform: uppercase;
+    margin-top: 1.5em;
+  }
+  #about {
+    padding: 50px 0;
+    background: #f5f5f7;
+  }
+  .about-inside {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #about h2 {
+    font-size: 2.3rem;
+  }
+  #about p {
+    font-size: 1.2rem;
+    color: #555;
+  }
+  #about .small {
+    font-size: 1.2rem;
+    color: #666;
+    font-weight: 600;
+  }
+  
 
