--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,23 +19,47 @@ body {
   margin: auto;
 }
 .navbar input[type="checkbox"],
-.navbar .temp-lines {
+.navbar .hamburger-lines {
   display: none;
 }
+
 .navbar {
+  box-shadow: 0px 5px 10px 0px #aaa;
   position: fixed;
   width: 100%;
   background: #fff;
   color: #000;
   opacity: 0.85;
   height: 50px;
+  z-index: 12;
 }
+.menu-items {
+    order: 2;
+    display: flex;
+  }
+  .menu-items li {
+    list-style: none;
+    margin-left: 1.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+  }
+  .menu-items a {
+    text-decoration: none;
+    color: #444;
+    font-weight: 500;
+    transition: color 0.3s ease-in-out;
+  }
 .navbar-container {
   display: flex;
   justify-content: space-between;
   height: 64px;
   align-items: center;
 }
+.logo {
+    order: 1;
+    font-size: 2.3rem;
+    margin-bottom: 0.5rem;
+  }
 .tagline {
     display: flex;
     flex-direction: column;
@@ -118,5 +142,35 @@ body {
     font-weight: 700;
   }
   
+#contact {
+    padding: 5rem 0;
+    background: rgb(226, 226, 226);
+  }
+  
+  .contact-container {
+    display: flex;
+    background: lightblue;
+  }
+  
+  .contact-img {
+    width: 100%;
+  }
+  
+  .contact-img img {
+    display: block;
+    height: 400px;
+    width: 100%;
+    object-position: center;
+    object-fit: cover;
+  }
+  .contact-details .details-bg{
+    background-color: lightblue;
+    padding-left:30px;
+    padding-top: 30px;
+  }
+  .contact-details h2{
+    text-transform: uppercase;
+    padding-bottom: 50px;
+  }
   
 
